# teamtools

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
.codex/rules/: comet-phase-guard.md
.codex/skills/comet-archive/: SKILL.md
.codex/skills/comet-build/: SKILL.md
.codex/skills/comet-hotfix/: SKILL.md
.codex/skills/comet-tweak/: SKILL.md
.codex/skills/comet-verify/: SKILL.md
.comet/: config.yaml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  pagination.py  worker.py
backend/app/modules/: __init__.py
backend/app/modules/fpa/: __init__.py  input_normalizer.py  service.py  service_errors.py
backend/app/modules/model_keys/: __init__.py  service.py
backend/app/modules/ops/: __init__.py
backend/tests/: test_fpa_mvp.py
docs/architecture/: 01-技术架构.md  02-数据与文件存储.md  03-任务处理与结果生成设计.md  04-安全边界.md  05-数据库设计.md  06-编码与文本文件规范.md
docs/deployment/: 01-本地开发.md  02-服务器部署.md
docs/modules/fpa/: 01-已确认需求.md  02-任务流程设计.md  (+9 more)
docs/ui/: 01-整体页面设计.md  README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
openspec/: config.yaml
scripts/: build-frontend.ps1  check-encoding.ps1  create-user.py  dev-api.ps1  dev-worker.ps1  import-users-from-excel.py  init-data.ps1  restart-dev-api.ps1
scripts/fpa/: build_ai_request_package.py  fill_fpa_workbook.py  validate_ai_result.py
tests/fpa/: test_ai_request_package.py  test_fill_fpa_workbook.py
tools/: check_text_encoding.py  deepseek-browser-test.html
(+197 files in other folders)
