[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamtools-backend"
version = "0.1.0"
description = "TeamTools backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "openpyxl>=3.1",
  "uvicorn[standard]>=0.30"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
